# crysys

./: .gitignore  CMakeLists.txt  LICENSE  asd.c  asd.sql  client.ini  database.cpp  database.h  des.cpp  encrypt.h  main.c  makefile  man.c  md5.c  net.cpp  network.cpp  network.h  qwe.c  server.ini  signdes.c  tran.h  说明.txt
