set(CMAKE_CXX_FLAGS "$(CMAKE_CXX_FLAGS) -std=c++14")
add_library(core SHARED des.cpp md5.c network.cpp signdes.c database.cpp)
target_link_libraries(core boost_system-mt sqlite3 ws2_32 mswsock boost_filesystem-mt)
add_executable(main main.c)
target_link_libraries(main core)
add_executable(asd asd.c)
target_link_libraries(asd core)
add_executable(qwe qwe.c)
target_link_libraries(qwe core)
add_executable(man man.c)
target_link_libraries(man core)
